--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,11 +1,10 @@
-FROM lsiobase/alpine:3.9
+FROM lsiobase/nginx:arm64v8-3.9
 
 ARG BUILD_DATE
 ARG VERSION
 ARG QUASSEL-WEB_COMMIT
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="chbmb"
-
 
 RUN \
  echo "**** install build packages ****" && \
