Add curl to build packages

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -9,7 +9,8 @@ LABEL maintainer="chbmb"
 RUN \
  echo "**** install build packages ****" && \
  apk add --no-cache --virtual=build-dependencies \
-	git && \
+    curl \
+    git && \
  echo "**** install runtime packages ****" && \
  apk add --no-cache \
 	npm && \
