--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -25,7 +25,8 @@ param_env_vars:
   - { env_var: "QUASSEL_PORT", env_value: "4242", desc: "specify the port of your Quassel Core instance" }
   - { env_var: "URL_BASE", env_value: "/quassel", desc: "Specify a url-base in reverse proxy setups ie. `/quassel`" }
   - { env_var: "HTTPS", env_value: "true", desc: "specify `true` to use https on `64443` or false to use http on `64080`" }
-  - { env_var: "FORCE_DEFAULT", env_value: "false", desc: "specify `true` to use only the default instance of Quassel Core specified above" }  
+  - { env_var: "FORCE_DEFAULT", env_value: "false", desc: "specify `true` to use only the default instance of Quassel Core specified above" } 
+  - { env_var: "ADVANCED", env_value: "false", desc: "specify `true` to configure through `/config/settings-user.js` ignoring the above environmental variables" }  
 
 param_usage_include_ports: true
 param_ports:
@@ -35,7 +36,8 @@ param_ports:
 # application setup block
 app_setup_block_enabled: true
 app_setup_block: |
-  By default this container webui will be available on `https://$SERVER_IP:64443`.  To setup this container you can either use the environmental variables as specified above and these will overwrite the respective settings in `/config/settings-user.js` or omit the environmental variables and edit `/config/settings-user.js` directly.
+  By default this container webui will be available on `http://$SERVER_IP:64080` if `HTTPS` is set to `false` or `https://$SERVER_IP:64443` if `HTTPS` is set to `true`.  To setup this container you can either use the first five environmental variables as specified above or set the environmental variable `ADVANCED` to `true` and edit `/config/settings-user.js` to configure your instance, ignoring the other environmental variables, this will allow more granular control of your quassel web instance.
 # changelog
 changelogs:
+- { date: "18.05.19:", desc: "Reconfigure environmental variable setup." }
 - { date: "28.04.19:", desc: "Initial Release." }
