--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,6 @@
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.15
+# syntax=docker/dockerfile:1
+
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.17
 
 ARG BUILD_DATE
 ARG VERSION
@@ -7,10 +9,6 @@ LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DA
 LABEL maintainer="chbmb"
 
 RUN \
-  echo "**** install build packages ****" && \
-  apk add --no-cache --virtual=build-dependencies \
-    curl \
-    git && \
   echo "**** install runtime packages ****" && \
   apk add --no-cache \
     npm && \
@@ -31,8 +29,6 @@ RUN \
   npm install && \
   echo "**** cleanup ****" && \
   cp /app/quassel-web/settings.js /defaults && \
-  apk del --purge \
-    build-dependencies && \
   rm -rf \
     /root && \
   mkdir -p \
