--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -43,6 +43,7 @@ app_setup_block: |
   ```
 # changelog
 changelogs:
+  - { date: "13.02.23:", desc: "Rebasing to Alpine 3.17, migrate to s6v3." }
   - { date: "12.02.22:", desc: "Rebasing to alpine 3.15." }
   - { date: "01.06.20:", desc: "Rebasing to alpine 3.12." }
   - { date: "19.12.19:", desc: "Rebasing to alpine 3.11." }
