--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.18
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.20
 
 ARG BUILD_DATE
 ARG VERSION
@@ -27,6 +27,7 @@ RUN \
     /app/quassel-web --strip-components=1 && \
   cd /app/quassel-web && \
   npm install && \
+  printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
   echo "**** cleanup ****" && \
   rm -rf \
     /root && \
