--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -6,6 +6,7 @@ project_url: "https://github.com/magne4000/quassel-webserver"
 project_logo: "https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/quassel-web-banner.png"
 project_blurb: "[{{ project_name|capitalize }}]({{ project_url }}) is a web client for Quassel.  Note that a Quassel-Core instance is required, we have a container available [here.](https://hub.docker.com/r/linuxserver/quassel-core/)"
 project_lsio_github_repo_url: "https://github.com/linuxserver/docker-{{ project_name }}"
+project_deprecation_status: true
 # supported architectures
 available_architectures:
   - {arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
@@ -81,6 +82,7 @@ init_diagram: |
   "quassel-web:latest" <- Base Images
 # changelog
 changelogs:
+  - {date: "26.12.24:", desc: "Deprecate."}
   - {date: "25.05.24:", desc: "Rebase to Alpine 3.20."}
   - {date: "10.11.23:", desc: "Rebase to Alpine 3.18. Rename settings-user.js to .cjs to match upstream."}
   - {date: "06.07.23:", desc: "Deprecate armhf. As announced [here](https://www.linuxserver.io/blog/a-farewell-to-arm-hf)"}
